@@ -4,6 +4,13 @@ padthv1 - An old-school additive polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- All randomizers now compliant to the standard normal
+  distribution. (EXPERIMENTAL)
+- Make sure compiler flags comply to c++11 as standard.
+
+
 0.9.9  2019-07-18  A Summer'19 Release.
 
 - Randomization of current parameters and partials is
